--- a/pageadmin/berandaadmin.html
+++ b/pageadmin/berandaadmin.html
@@ -70,7 +70,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="penilaianpk.html">
+          <a class="nav-link" href="datapengawas.html">
               <div class="bg-gradient-info icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                   <img src="../assets/foto/profilpengawas.png" alt="Government" width="30" height="30">
               </div>
@@ -79,7 +79,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="penilaianpk.html">
+          <a class="nav-link" href="datajabatan.html">
               <div class="bg-gradient-info icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                   <img src="../assets/foto/jabatan.png" alt="Government" width="30" height="30">
               </div>
@@ -88,7 +88,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="penilaianpk.html">
+          <a class="nav-link" href="penilaianpm.html">
               <div class="bg-gradient-info icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                   <img src="../assets/foto/pm.png" alt="Government" width="30" height="30">
               </div>
